--- a/PartyMaker/Base.lproj/PAMNewViewController.xib
+++ b/PartyMaker/Base.lproj/PAMNewViewController.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="MyriadProBold.ttf">
-            <string>MyriadPro-Bold</string>
             <string>MyriadPro-Bold</string>
             <string>MyriadPro-Bold</string>
         </mutableArray>
@@ -28,14 +27,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PAMNewViewController">
             <connections>
                 <outlet property="chooseButton" destination="I3w-a0-EZd" id="TVk-C5-Zvt"/>
-                <outlet property="closeButton" destination="7Bc-H9-5aB" id="M3l-On-QfY"/>
                 <outlet property="cursorView" destination="5o4-C3-p2X" id="YSL-Mi-Out"/>
-                <outlet property="descriptionToolbar" destination="Dir-wE-P96" id="2LH-r8-NaE"/>
                 <outlet property="endSlider" destination="aYW-0X-ziO" id="aFc-CA-4We"/>
                 <outlet property="endTimeLabel" destination="Xnw-h5-PBI" id="Naq-Us-N7c"/>
                 <outlet property="partyDescription" destination="t3K-94-UZs" id="pEg-40-b7j"/>
                 <outlet property="partyNameTextField" destination="NpS-Ud-yrP" id="33S-aS-fCp"/>
-                <outlet property="saveButton" destination="MDi-em-0oD" id="Z1S-7S-2fi"/>
                 <outlet property="startSlider" destination="cu9-2Z-pZA" id="7EI-0Z-XG1"/>
                 <outlet property="startTimeLabel" destination="qVq-r9-fG2" id="qLE-90-e3N"/>
                 <outlet property="typeEventPageControl" destination="15V-68-awM" id="muT-vf-QIn"/>
@@ -73,7 +69,7 @@
                     <color key="backgroundColor" red="0.47058823529411764" green="0.6705882352941176" blue="0.086274509803921567" alpha="1" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" name="MyriadPro-Bold" family="Myriad Pro" pointSize="16"/>
                     <size key="titleShadowOffset" width="2.2250738585072014e-308" height="0.0"/>
-                    <state key="normal" title="SAVE">
+                    <state key="normal" title="LOCATION">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </state>
                     <userDefinedRuntimeAttributes>
@@ -82,26 +78,7 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                     <connections>
-                        <action selector="actionSaveButton:" destination="-1" eventType="touchUpInside" id="l2b-85-1ZJ"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="7Bc-H9-5aB">
-                    <rect key="frame" x="122" y="459" width="190" height="36"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" red="0.8784313725490196" green="0.20784313725490197" blue="0.054901960784313725" alpha="1" colorSpace="calibratedRGB"/>
-                    <fontDescription key="fontDescription" name="MyriadPro-Bold" family="Myriad Pro" pointSize="16"/>
-                    <size key="titleShadowOffset" width="2.2250738585072014e-308" height="0.0"/>
-                    <state key="normal" title="CANCEL">
-                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </state>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                            <integer key="value" value="5"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                    <connections>
-                        <action selector="actionCloseButton:" destination="-1" eventType="touchUpInside" id="egA-3s-TTS"/>
-                        <action selector="actionMoveCursor:" destination="-1" eventType="touchDown" id="9of-Mp-BYi"/>
+                        <action selector="actionMoveCursor:" destination="-1" eventType="touchDown" id="JCz-gS-Vbf"/>
                     </connections>
                 </button>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Party name" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" id="NpS-Ud-yrP">
@@ -195,7 +172,7 @@
                     </connections>
                 </textView>
                 <view contentMode="scaleToFill" id="3up-SS-3xX" userLabel="White Line">
-                    <rect key="frame" x="15" y="21" width="1" height="455"/>
+                    <rect key="frame" x="15" y="21" width="1" height="413"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.8784313725490196" green="0.85098039215686272" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
@@ -249,8 +226,18 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
+                <view contentMode="scaleToFill" id="Kz9-tK-XPF" userLabel="Circle6">
+                    <rect key="frame" x="11" y="343" width="9" height="9"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" red="0.90196078430000004" green="0.87843137250000003" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <real key="value" value="4.5"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </view>
                 <view contentMode="scaleToFill" id="zkI-vg-340" userLabel="Circle7">
-                    <rect key="frame" x="11" y="472" width="9" height="9"/>
+                    <rect key="frame" x="11" y="425" width="9" height="9"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.90196078430000004" green="0.87843137250000003" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
                     <userDefinedRuntimeAttributes>
@@ -312,22 +299,12 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FINAL" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4Kp-nf-mGd">
-                    <rect key="frame" x="30" y="466" width="84" height="21"/>
+                    <rect key="frame" x="28" y="419" width="84" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="12"/>
                     <color key="textColor" red="0.87843137250000003" green="0.85098039219999999" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view contentMode="scaleToFill" id="Kz9-tK-XPF" userLabel="Circle6">
-                    <rect key="frame" x="11" y="343" width="9" height="9"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" red="0.90196078430000004" green="0.87843137250000003" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                            <real key="value" value="4.5"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                </view>
             </subviews>
             <color key="backgroundColor" red="0.1803921568627451" green="0.19215686274509802" blue="0.2196078431372549" alpha="1" colorSpace="calibratedRGB"/>
             <nil key="simulatedStatusBarMetrics"/>
@@ -336,27 +313,6 @@
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
             <point key="canvasLocation" x="712" y="424"/>
         </view>
-        <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="Dir-wE-P96">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-            <items>
-                <barButtonItem systemItem="cancel" id="Kld-uo-VHb">
-                    <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <connections>
-                        <action selector="actionCancelDescription:" destination="-1" id="vEE-Gl-wYg"/>
-                    </connections>
-                </barButtonItem>
-                <barButtonItem systemItem="flexibleSpace" id="nqo-3H-h7O"/>
-                <barButtonItem systemItem="done" id="HnJ-sC-fGE">
-                    <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <connections>
-                        <action selector="actionDoneDescription:" destination="-1" id="LyF-A0-J5c"/>
-                    </connections>
-                </barButtonItem>
-            </items>
-            <color key="barTintColor" red="0.2666666667" green="0.28627450980000002" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
-            <point key="canvasLocation" x="1080" y="447"/>
-        </toolbar>
     </objects>
     <resources>
         <image name="TimePopup" width="40" height="31"/>
