--- a/PAMCustomDatePiker.xib
+++ b/PAMCustomDatePiker.xib
@@ -11,9 +11,13 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="189"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" barStyle="blackTranslucent" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QBX-A3-LEU">
+                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="blackTranslucent" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QBX-A3-LEU">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                     <color key="backgroundColor" red="0.26666666666666666" green="0.28627450980392155" blue="0.32549019607843138" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="320" id="Pu7-YD-cBa"/>
+                        <constraint firstAttribute="height" constant="44" id="cjf-GR-qZb"/>
+                    </constraints>
                     <items>
                         <barButtonItem systemItem="cancel" id="76d-z8-zW8">
                             <connections>
@@ -29,10 +33,14 @@
                     </items>
                     <color key="barTintColor" red="0.2666666667" green="0.28627450980000002" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
                 </toolbar>
-                <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="QdE-Ci-0yy">
+                <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="QdE-Ci-0yy">
                     <rect key="frame" x="0.0" y="44" width="320" height="145"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="145" id="CBF-ad-o6R"/>
+                        <constraint firstAttribute="width" constant="320" id="Mqw-X5-h8m"/>
+                    </constraints>
                     <date key="date" timeIntervalSinceReferenceDate="476628840.74591798">
                         <!--2016-02-08 12:54:00 +0000-->
                     </date>
@@ -46,6 +54,14 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="QBX-A3-LEU" firstAttribute="leading" secondItem="zWP-rH-euS" secondAttribute="leading" id="FYF-9W-23X"/>
+                <constraint firstAttribute="trailing" secondItem="QBX-A3-LEU" secondAttribute="trailing" id="b4P-ML-udp"/>
+                <constraint firstItem="QBX-A3-LEU" firstAttribute="top" secondItem="zWP-rH-euS" secondAttribute="top" id="dJh-ng-3di"/>
+                <constraint firstAttribute="trailing" secondItem="QdE-Ci-0yy" secondAttribute="trailing" id="hRS-bE-pbT"/>
+                <constraint firstItem="QdE-Ci-0yy" firstAttribute="leading" secondItem="zWP-rH-euS" secondAttribute="leading" id="vZ7-zr-kUT"/>
+                <constraint firstAttribute="bottom" secondItem="QdE-Ci-0yy" secondAttribute="bottom" id="xvS-xx-QqD"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
