--- a/PartyMaker/Base.lproj/Main.storyboard
+++ b/PartyMaker/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="qNV-YE-6Aw">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="qNV-YE-6Aw">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -129,7 +130,7 @@
                                 <rect key="frame" x="0.0" y="28" width="320" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" tableViewCell="IIp-5o-i9w" id="5sJ-9O-niX">
-                                    <rect key="frame" x="0.0" y="0.0" width="287" height="69"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="69.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YR3-Nh-pcn">
@@ -172,7 +173,7 @@
                                     <outlet property="partyDateLabel" destination="kNG-q0-f6e" id="ee5-99-kef"/>
                                     <outlet property="partyNameLabel" destination="jZ5-Zu-GPo" id="f0B-g3-5Cb"/>
                                     <outlet property="patryTypeImage" destination="YR3-Nh-pcn" id="PTN-tJ-lVR"/>
-                                    <segue destination="DCO-us-anL" kind="show" id="y34-ec-i45"/>
+                                    <segue destination="DCO-us-anL" kind="show" identifier="SegueShowParty" id="y34-ec-i45"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -183,6 +184,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="PARTY MAKER" id="5dN-i6-i89">
+                        <barButtonItem key="backBarButtonItem" title="back" id="SHE-F5-Kpf"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="5VH-Rt-Nig">
                             <color key="tintColor" red="0.13725490200000001" green="0.1450980392" blue="0.16862745100000001" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
@@ -388,18 +390,13 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vdj-Ll-Ocn" userLabel="GrayView">
                                         <rect key="frame" x="0.0" y="0.0" width="290" height="224"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PartyLogo_Small_0" translatesAutoresizingMaskIntoConstraints="NO" id="fGl-Jf-Iih" userLabel="Party logo">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PartyLogo_Small_0" translatesAutoresizingMaskIntoConstraints="NO" id="fGl-Jf-Iih" userLabel="Party logo">
                                                 <rect key="frame" x="82" y="10" width="126" height="126"/>
                                                 <color key="backgroundColor" red="0.18039215689999999" green="0.19215686269999999" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="fGl-Jf-Iih" secondAttribute="height" multiplier="1:1" id="9sv-Mp-hw6"/>
                                                     <constraint firstAttribute="height" relation="lessThanOrEqual" priority="750" constant="50" id="XNa-wt-TeO"/>
                                                 </constraints>
-                                                <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                        <integer key="value" value="56"/>
-                                                    </userDefinedRuntimeAttribute>
-                                                </userDefinedRuntimeAttributes>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lzC-tm-NZM" userLabel="Name Party Lable">
                                                 <rect key="frame" x="10" y="146" width="270" height="25"/>
@@ -464,13 +461,13 @@
                                 <rect key="frame" x="64" y="311" width="192" height="124"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NJy-6q-jEe">
-                                        <rect key="frame" x="0.0" y="0.0" width="192" height="36"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="192" height="37"/>
                                         <color key="backgroundColor" red="0.15686274510000001" green="0.51764705879999995" blue="0.68627450980000004" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="46" id="I2j-bM-gn8"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="MyriadPro-Bold" family="Myriad Pro" pointSize="16"/>
-                                        <state key="normal" title="Button">
+                                        <state key="normal" title="LOCATION">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <userDefinedRuntimeAttributes>
@@ -485,13 +482,13 @@
                                         </variation>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="itN-AA-RMR">
-                                        <rect key="frame" x="0.0" y="44" width="192" height="36"/>
+                                        <rect key="frame" x="0.0" y="45" width="192" height="35"/>
                                         <color key="backgroundColor" red="0.54901960780000003" green="0.72941176470000002" blue="0.1137254902" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="46" id="T71-Tg-flO"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="MyriadPro-Bold" family="Myriad Pro" pointSize="16"/>
-                                        <state key="normal" title="Button">
+                                        <state key="normal" title="EDIT">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <userDefinedRuntimeAttributes>
@@ -506,13 +503,13 @@
                                         </variation>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S8u-aX-Kic">
-                                        <rect key="frame" x="0.0" y="88" width="192" height="36"/>
+                                        <rect key="frame" x="0.0" y="88" width="192" height="37"/>
                                         <color key="backgroundColor" red="0.92549019607843142" green="0.27843137254901962" blue="0.074509803921568626" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="46" id="sI1-J6-P7r"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="MyriadPro-Bold" family="Myriad Pro" pointSize="16"/>
-                                        <state key="normal" title="Button">
+                                        <state key="normal" title="DELETE">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <userDefinedRuntimeAttributes>
@@ -687,19 +684,6 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <view alpha="0.40000000596046448" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EHI-7t-thD" userLabel="Cursor">
-                                <rect key="frame" x="8" y="22" width="13" height="13"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="13" id="bnN-6O-Dem"/>
-                                    <constraint firstAttribute="width" constant="13" id="g7M-17-mNy"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <real key="value" value="6.5"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hsF-8K-sc2">
                                 <rect key="frame" x="119" y="11" width="191" height="36"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.69411764710000001" blue="0.1058823529" alpha="1" colorSpace="calibratedRGB"/>
@@ -806,7 +790,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" layoutMarginsFollowReadableWidth="YES" bounces="NO" alwaysBounceHorizontal="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PGW-uL-iaw">
-                                <rect key="frame" x="119" y="187" width="191" height="100"/>
+                                <rect key="frame" x="119" y="187" width="191" height="99.5"/>
                                 <color key="backgroundColor" red="0.2666666667" green="0.28627450980000002" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" priority="750" constant="50" id="uxP-hn-GdG"/>
@@ -831,7 +815,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="6" translatesAutoresizingMaskIntoConstraints="NO" id="Uck-02-KyP">
-                                <rect key="frame" x="119" y="265" width="191" height="22"/>
+                                <rect key="frame" x="119" y="264.5" width="191" height="22"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="22" id="QgE-7b-KYj"/>
                                 </constraints>
@@ -880,7 +864,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="uBX-DO-R7g">
-                                <rect key="frame" x="119" y="298" width="190" height="99"/>
+                                <rect key="frame" x="119" y="297.5" width="190" height="99.5"/>
                                 <color key="backgroundColor" red="0.13725490200000001" green="0.1450980392" blue="0.16862745100000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" priority="750" constant="50" id="E1k-lw-UgL"/>
@@ -898,7 +882,7 @@
                                 </connections>
                             </textView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cTR-HU-GYe" userLabel="Blue line">
-                                <rect key="frame" x="119" y="293" width="190" height="5"/>
+                                <rect key="frame" x="119" y="292.5" width="190" height="5"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="5" id="ua0-a6-6kN"/>
@@ -924,6 +908,19 @@
                                     <outlet property="delegate" destination="GDM-a4-Iq0" id="cQM-Jq-HvA"/>
                                 </connections>
                             </textField>
+                            <view alpha="0.40000000596046448" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EHI-7t-thD" userLabel="Cursor">
+                                <rect key="frame" x="8" y="22.5" width="13" height="13"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="13" id="bnN-6O-Dem"/>
+                                    <constraint firstAttribute="width" constant="13" id="g7M-17-mNy"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <real key="value" value="6.5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.18039215689999999" green="0.19215686269999999" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -991,7 +988,7 @@
                             <constraint firstItem="X78-a5-csn" firstAttribute="centerY" secondItem="3Wj-VH-SeI" secondAttribute="centerY" id="s7c-yb-XDv"/>
                             <constraint firstItem="X78-a5-csn" firstAttribute="leading" secondItem="3Wj-VH-SeI" secondAttribute="trailing" constant="7" id="sec-4S-aqb"/>
                             <constraint firstItem="bvP-ee-dQF" firstAttribute="top" secondItem="zbf-y8-6w5" secondAttribute="bottom" constant="11" id="wm0-7D-leV"/>
-                            <constraint firstItem="EHI-7t-thD" firstAttribute="top" secondItem="mTy-UW-y7W" secondAttribute="bottom" constant="22" id="yhw-Vd-aNu"/>
+                            <constraint firstItem="EHI-7t-thD" firstAttribute="centerY" secondItem="mTy-UW-y7W" secondAttribute="bottom" constant="29" id="yhw-Vd-aNu"/>
                             <constraint firstItem="Uck-02-KyP" firstAttribute="bottom" secondItem="PGW-uL-iaw" secondAttribute="bottom" id="zHL-bZ-tSH"/>
                             <constraint firstItem="hHj-Em-MG8" firstAttribute="leading" secondItem="30E-rw-Ivh" secondAttribute="trailing" constant="7" id="zS2-ZA-Hl8"/>
                         </constraints>
